# node/public/openapi.json
@@ -144,6 +144,110 @@
     }
   },
   "paths": {
+    "/analyze/instagram": {
+      "post": {
+        "operationId": "post-analyze-instagram",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Analyze"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      },
+      "get": {
+        "operationId": "get-analyze-instagram",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Analyze"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/analyze/instagram/elaborate": {
+      "post": {
+        "operationId": "post-analyze-instagram-elaborate",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Analyze"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/analyze/instagram/stream": {
+      "get": {
+        "operationId": "get-analyze-instagram-stream",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Analyze"
+        ],
+        "parameters": [],
+        "responses": {
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/health": {
       "get": {
         "operationId": "get-health",
@@ -654,6 +758,9 @@
     }
   },
   "tags": [
+    {
+      "name": "Analyze"
+    },
     {
       "name": "Health"
     },
